BAP-18442: Wrong scroll behavior in inline grids - ordered items block overflow issue fixes

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/drag-and-drop-view.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/drag-and-drop-view.scss
@@ -1,7 +1,7 @@
 /* @theme: admin.oro; */
 
 .drag-n-drop-sorting-view {
-    width: $drag-n-drop-sorting-view-width;
+    min-width: $drag-n-drop-sorting-view-width;
     overflow: $drag-n-drop-sorting-view-overflow;
 
     &__wrapper {
